--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation "com.android.support:preference-v7:28.0.0"
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
